--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -17,29 +17,29 @@
         <p>Demo</p>
         <br><p>Borders</p>
         <br>
-        <div class=".border-success">This is some text</div>
+        <div class="border-success">This is some text</div>
         <br>
-        <div class=".border-medium-warning">This is a demo wider border.</div>
+        <div class="border-medium-warning">This is a demo wider border.</div>
         <br>
-        <div class=".border-wide-error">A wide border.</div>
+        <div class="border-wide-error">A wide border.</div>
         <br>
-        <div class=".border-top-error">Example top border.</div>
+        <div class="border-top-error">Example top border.</div>
         <br>
         <p>Demo Buttons (a href=xxx)</p>
         <br>
-        <a href="#" class = ".btn-error">This is a demo button!</a>
+        <a href="#" class = "btn-error">This is a demo button!</a>
         <br>
-        <a href="#" class=".btn-warning">Another Button for you!</a>
+        <a href="#" class="btn-warning">Another Button for you!</a>
         <br>
         <p>Button Groups</p>
         <br>
-        <a href="#" class = ".btn-group-s-default">This is the start</a>
-        <a href="#" class = ".btn-group-m-default">This is the middle</a>
-        <a href="#" class = ".btn-group-e-default">This is the end</a>
+        <a href="#" class = "btn-group-s-default">This is the start</a>
+        <a href="#" class = "btn-group-m-default">This is the middle</a>
+        <a href="#" class = "btn-group-e-default">This is the end</a>
         <br>
         <p>They can be mixed.</p>
-        <a href="#" class=".btn-group-s-default">Default</a>
-        <a href="#" class = ".btn-group-m-warning">Warning</a>
-        <a href = "#" class = ".btn-group-e-error">Error</a>
+        <a href="#" class="btn-group-s-default">Default</a>
+        <a href="#" class = "btn-group-m-warning">Warning</a>
+        <a href = "#" class = "btn-group-e-error">Error</a>
     </body>
 </html>
