--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -33,9 +33,7 @@
         <br>
         <p>Button Groups</p>
         <br>
-        <a href="#" class = "btn-group-s-default">This is the start</a>
-        <a href="#" class = "btn-group-m-default">This is the middle</a>
-        <a href="#" class = "btn-group-e-default">This is the end</a>
+        <a href="#" class = "btn-group-s-default">This is the start</a><a href="#" class = "btn-group-m-default">This is the middle</a><a href="#" class = "btn-group-e-default">This is the end</a>
         <br>
         <p>They can be mixed.</p>
         <a href="#" class="btn-group-s-default">Default</a>
