--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -36,8 +36,6 @@
         <a href="#" class = "btn-group-s-default">This is the start</a><a href="#" class = "btn-group-m-default">This is the middle</a><a href="#" class = "btn-group-e-default">This is the end</a>
         <br>
         <p>They can be mixed.</p>
-        <a href="#" class="btn-group-s-default">Default</a>
-        <a href="#" class = "btn-group-m-warning">Warning</a>
-        <a href = "#" class = "btn-group-e-error">Error</a>
+        <a href="#" class="btn-group-s-default">Default</a><a href="#" class = "btn-group-m-warning">Warning</a><a href = "#" class = "btn-group-e-error">Error</a>
     </body>
 </html>
