--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -37,5 +37,12 @@
         <br>
         <p>They can be mixed.</p>
         <a href="#" class="btn-group-s-default">Default</a><a href="#" class = "btn-group-m-warning">Warning</a><a href = "#" class = "btn-group-e-error">Error</a>
+        <br>
+        <p>Button Grids</p>
+        <a href="#" class="btn-table-topleft-default">topleft</a><a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-topright-default">topright</a>
+        <br>
+        <a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-middle-default">middle</a>
+        <br>
+        <a href="#" class="btn-table-bottomleft-default">bottomleft</a><a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-bottomright-default">bottomright</a>
     </body>
 </html>
