--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="FrMWrk.css" type="text/css" media="all" />
+        
+        <title>FrmWrk</title>
     </head>
     <body>
         <h1>FrMWrK.css V0.0.1 (Framework)</h1>
@@ -38,11 +40,13 @@
         <p>They can be mixed.</p>
         <a href="#" class="btn-group-s-default">Default</a><a href="#" class = "btn-group-m-warning">Warning</a><a href = "#" class = "btn-group-e-error">Error</a>
         <br>
-        <p>Button Grids</p>
-        <a href="#" class="btn-table-topleft-default">topleft</a><a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-topright-default">topright</a>
+        <p>Password Bars</p>
+            <input type="text" id="password-input" placeholder="type something"></input>
+            <br>
+            <br>
+            <div class="password-bar" style="--width:0%" ></div>
         <br>
-        <a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-middle-default">middle</a>
-        <br>
-        <a href="#" class="btn-table-bottomleft-default">bottomleft</a><a href="#" class="btn-table-middle-default">middle</a><a href="#" class="btn-table-bottomright-default">bottomright</a>
+        
     </body>
+    <script type="text/javascript" src="Frmwrk.js"></script>
 </html>
