--- a/order/index.html
+++ b/order/index.html
@@ -213,11 +213,11 @@
                                         <li>Boost of purity can range from 100% to stacked 50000% increase.</li>
                                     </ol>
                                 </li>
-                                <li> * modifiers</li>
+                                <li> <strong>* modifiers</strong></li>
                                 <ol style="list-style-type: decimal">
                                     <li>At most in a triad, grant 10x to 30x Max Power output</li>
                                 </ol>
-                                <li>+ modifier</li>
+                                <li><strong>+ modifier</strong></li>
                                 <ol style="list-style-type: decimal">
                                     <li>Grant +50% perfectness</li>
                                 </ol>
