--- a/NotationsFunctions/ArrayHierachy.html
+++ b/NotationsFunctions/ArrayHierachy.html
@@ -4,5 +4,7 @@
     <body>
         <h1>The Array Hierarchy</h1>
     </body>
-
+    <footer>
+        Return to <a href = "https://penguin-number-123.github.io/NotationsFunctions">Notations and Functions</a>
+    </footer>
  </html>
