--- a/NotationsFunctions/PowerfulArrow.html
+++ b/NotationsFunctions/PowerfulArrow.html
@@ -7,10 +7,15 @@
     <body>
         <h1>Powerful arrow Notation and Chained variant.</h1>
         <p>
-            Note that all variables in this function are natural numbers.
-            \begin{eqnarray*} a \uparrow^n b = \left\{ \begin{array}{ll} {a}^b & (n = 1) \\ a & (n > 1, b = 1) \\ [a \uparrow^{n-1} (]^{b\uparrow^{n-1}b}a \uparrow^n (b-1)) & (n > 1, b > 1) \end{array} \right. \end{eqnarray*}
-            <h2>Example of reduction</h2>
-            \(3\uparrow^23 = [3\uparrow^1(]^{3\uparrow^13}(3\uparrow^22) = 3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1([3\uparrow^1]^{2\uparrow^12}(3\uparrow^21) = 3\uparrow^231 \text{in regular uparrow notation.}\)
+            Note that all variables in this function are natural numbers.<br>
+            In addition, PAN never uses multiple up arrows, which can help distinguish it from normal up arrow notation<br>
+            Finally, if needed, PAN can be written with \(\uparrow_P\) for best legibility.
+            \begin{eqnarray*} a \uparrow^n b = \left\{ \begin{array}{ll} {a}^b & (n = 1) \\ a & (n > 1, b = 1) \\ a \uparrow^{n-1}^{b\uparrow^{n-1}b} (a \uparrow^n (b-1)) & (n > 1, b > 1) \end{array} \right. \end{eqnarray*}
+            <h2>Definition of the third case</h2>
+            The third case referes to recursion.<br>
+            \(f^{a}(x) = f^{a-1}(f^{a-1}(x)))<br>
+            Note this is slightly different from normal recurstion, as the total iterations should be \(2^{a}\)
+            In the above third case, we take \(f(x)\) to be \(a\uparrow^{n-1}(x)\).
             \(a \rightarrow b = a^{b}\)<br />
             Where the chained variant is as follows:<br /> 
             \(a \rightarrow b \rightarrow c = a\uparrow^cb = a\underbrace{\uparrow\ldots\uparrow}_cb\) (in which powerful-arrow notation is used) = a[c+2]b (in which the bracket notation of hyper operator is used)<br /> 
