--- a/NotationsFunctions/ArrayHierachy.html
+++ b/NotationsFunctions/ArrayHierachy.html
@@ -3,6 +3,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <body>
         <h1>The Array Hierarchy</h1>
+        This notation stems from the fact that it is possible to define recursion using more than a single number. 
     </body>
     <footer>
         Return to <a href = "https://penguin-number-123.github.io/NotationsFunctions">Notations and Functions</a>
