--- a/NotationsFunctions/Delta.html
+++ b/NotationsFunctions/Delta.html
@@ -23,6 +23,9 @@ Better Definition<br />
 The maximum sum of all nonzero numbers that can be written (in the finished plane), with a BB(n) state and a BB(n) colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
 BB(n) is the busy beaver function.
 </p>
+<p>
+    Finally, \(\Delta_\Delta(n)). This is defined to be the maximum number that can be computed for an n-state, n colour, n dimentional turing machine to halt.
+</p>
 <footer>
     Return to <a href = "https://penguin-number-123.github.io/NotationsFunctions">Notations and Functions</a>
 </footer>
