--- a/NotationsFunctions/index.html
+++ b/NotationsFunctions/index.html
@@ -22,7 +22,8 @@
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/AcceleratedHierarchy.html">Accelerated Hierarchy</a></h2>
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/PowerfulArrow.html">Powerful Arrow</a></h2>
         <h2><a href="./ArrayHierachy.html">Array Hierarchy</a></h2>
-    </body>
+        <h2><a href="./Penguine.html">Penguin E notation</a></h2>
+      </body>
     <script>
         function Responsive() {
           var x = document.getElementById("myTopnav");
