--- a/NotationsFunctions/Penguine.html
+++ b/NotationsFunctions/Penguine.html
@@ -6,7 +6,14 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <body>
         <h1>Penguin E system</h1>
-        <p>
+        <p>Another Extension of the E!</p>
+        <h2>Base Rules</h2>
+        aEb = \(10^{b}\) <br>       
+        \(aE^{b+1}c = aE^{b}(aE^{b}c)\)<br>
+        \(aE^{0}c = aEc\)
+        <h2>Extending the system</h2>
+        
+        <!--<p>
             So, this is some sort of E system.
 
         P is for penguiN<br />
@@ -53,6 +60,8 @@
 
         \(\left. \begin{matrix} &&xPa\underbrace{\#\cdots \#}b\\ & &xPa\underbrace{\#\cdots \#}b \\ & & \;\;\;\;\underbrace{\quad\;\; \vdots \quad \;\;}\\ & &xPa\underbrace{\# \cdots \#}b \\ & & b\quad \#'s \end{matrix} \right \} xPa\#b\) <br />
         </p>
+    -->
+
     </body>
     <footer>Return to <a href ="https://penguin-number-123.github.io/NotationsFunctions">Notations and Functions</a>.</footer>
 </html>
